fix get items swaggo
