# docs/swagger.json
@@ -33,6 +33,20 @@
                     "ITEM"
                 ],
                 "summary": "Show all data Items",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "page to show",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "limit view items",
+                        "name": "view",
+                        "in": "query"
+                    }
+                ],
                 "responses": {}
             }
         },
